# numpy_mmap

./: Cargo.toml  README.md
example/: Cargo.toml  README.md
example/src/: lib.rs
mmap/: Cargo.toml  README.md
src/: dtype.rs  lib.rs  to_numpy.rs
